--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="find_books">Find Books</string>
     <string name="title_author_isbn">Title / Author / ISBN</string>
     <string name="find">Find</string>
+    <string name="refresh">Refresh</string>
 </resources>
