--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="book_average_rating">Average Rating: %s / 5</string>
     <string name="book_ratings_count">Ratings Count: %s</string>
     <string name="book_reviews_count">Reviews Count: %s</string>
+    <string name="book_publication_date">Published: %s</string>
 
     <string name="author_details_title">Author Details</string>
     <string name="author_name">Author: %s </string>
