Manage config changes and screen states

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="find">Find</string>
     <string name="refresh">Refresh</string>
     <string name="recent_reviews">Recent Reviews</string>
+    <string name="no_search_results">No Search Results</string>
 </resources>
