Adding the footer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="author_info_hometown">Hometown: %s</string>
     <string name="author_info_born_at">Born At: %s</string>
     <string name="author_info_died_at">Died At: %s</string>
+    <string name="powered_by">powered by</string>
 </resources>
