--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="book_reviews_count">Reviews Count: %s</string>
     <string name="book_publication_date">Published: %s</string>
     <string name="book_description">Description:\n%s</string>
+    <string name="web_link">&lt;a href=\"%s\"&gt;more…&lt;/a&gt;</string>
 
     <string name="author_details_title">Author Details</string>
     <string name="author_name">Author: %s </string>
