--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,6 @@
     <string name="home_author_info_desc">Everything you need to know about your favourite author</string>
     <string name="home_recent_reviews_desc">See the latest reviews from goodreads</string>
     <string name="home">Home</string>
-    <string name="card_transition">card</string>
+    <string name="card_transition_name">card</string>
     <string name="toolbar_transition_name">toolbar</string>
 </resources>
